flask-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-app
  namespace: flask-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: flask-app
  template:
    metadata:
      labels:
        app: flask-app
    spec:
      containers:
      - name: test
        image: draz1than/homework:fixed  # Using the new fixed image
        imagePullPolicy: Always  # Force Kubernetes to pull the latest image
        ports:
        - containerPort: 5000
        volumeMounts:
        - name: app-data
          mountPath: /app/data
      volumes:
      - name: app-data
        emptyDir: {}
