flask-statefulset.yaml
# Create a StatefulSet definition file
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: flask-app
  namespace: flask-app
spec:
  serviceName: flask-service
  replicas: 2
  selector:
    matchLabels:
      app: flask-app
  template:
    metadata:
      labels:
        app: flask-app
    spec:
      containers:
      - name: flask-app
        image: draz1than/homework:fixed
        imagePullPolicy: Always
        ports:
        - containerPort: 5000
        volumeMounts:
        - name: flask-data
          mountPath: /app/data
  volumeClaimTemplates:
  - metadata:
      name: flask-data
    spec:
      accessModes: [ "ReadWriteOnce" ]
      storageClassName: manual
      resources:
        requests:
          storage: 1Gi
